# oudelohuis-et-al-2026-anatomicalsubspace

./: Covariance_Behavior.py  examples_planes.py  loopcorr.py  params.py  pyproject.toml  tuned_properties.py
behavior/: Covariance_Behavior.py  RRR_within_across_behavout.py  analyze_joint_labeled_movesplit.py  regress_out_AL.py  run_RRR_joint_labeled_movesplit.py  show_regressout_beh_neural
cca/: CCA_V1PM_labelweights.py  CCA_V1PM_labelweights_spont.py  PLS_V1PM_labelweights.py  analyze_CCA_labelweights.py  example_CCA_labelweights.py  run_CCA_labeled.py
doc/: analyze_labeled_doc.py  doc_example.py  doc_example_depr.py  run_labeled_doc.py
labeling/: tuned_properties.py
loaddata/: session.py  session_info.py
looped/: analyze_rrr_looped.py  loopcorr.py  loopcorr_depr.py  run_RRR_joint_looped.py  run_RRR_joint_looped_time.py
privatesubspace/: private_shared_methods.docx  private_shared_methods.md  run_RRR_private_shared.py
rrr/: RRR_V1PM.py  RRR_V1PM_labeled_timeres.py  RRR_V1PM_labeling.py  RRR_V1PM_spont.py  RRR_V1PM_tensor.py  RRR_joint_labeled.py  RRR_joint_labeled_doc.py  RRR_predictsame.py  RRR_subspace_overlap.py  RRR_validation.py  RRR_visualization.py  RRR_within_across_behavout.py  analyze_joint_labeled_AL.py  analyze_joint_labeled_FB.py  analyze_joint_labeled_FF.py  analyze_joint_labeled_controls.py  analyze_joint_labeled_movesplit.py  analyze_joint_labeled_spont.py  analyze_joint_labeled_time.py  analyze_rrr_looped.py  analyze_separate_labeled.py  ex_joint_labeled_latents.py  labeled_layers_timeres.py  rf_match.py  run_RRR_joint_labeled.py  (+11 more)
(+24 files in other folders)
