[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molanalysis"
version = "0.1.1"

[tool.setuptools.packages.find]
where = ["."]
include = ["behavior*", "cca*", "doc*", "labeling*", "loaddata*", "looped*", "rrr*", "rrr_validation*", "utils*"]
